--- a/assets/package.json
+++ b/assets/package.json
@@ -20,6 +20,7 @@
     "mini-css-extract-plugin": "^0.11.0",
     "node-sass": "^4.14.0",
     "optimize-css-assets-webpack-plugin": "^5.0.0",
+    "is-svg": "^4.2.2",
     "postcss-loader": "^3.0.0",
     "sass-loader": "^10.0.0",
     "tailwindcss": "^1.7.0",
